Fix issue where shadow below the last card in the timeline was cut off

--- a/styles/components/FactCard.scss
+++ b/styles/components/FactCard.scss
@@ -146,8 +146,8 @@ $timelineDotSize: 0.375rem;
 
 .wcp-vertical-timeline-item:last-child {
   .wcp-vertical-timeline-item__inner-cards-list {
-    padding-bottom: $gutter-s;
-    margin-bottom: 0-$gutter-s;
+    padding-bottom: $gutter-m;
+    margin-bottom: 0-$gutter-m;
   }
 
   .wcp-vertical-timeline-item__line-and-dot
